# bounty-challenge

./: .gitignore  AGENTS.md  AUDIT_REPORT.md  Cargo.toml  FIX_PROPOSAL.md  FIX_SUBMISSION.patch  README.md  SWARM_FIX.md  bounty_challenge.wasm  config.toml  fix_32515.py  fix_32515.ts
.githooks/: install.sh  pre-push
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  performance_issue.yml
.github/workflows/: ci.yml  protect-valid-label.yml  release.yml
bins/bounty-cli/: Cargo.toml
bins/bounty-cli/src/: main.rs  rpc.rs
bins/bounty-cli/src/tui/: leaderboard.rs  mod.rs  stats.rs  weights.rs
bins/bounty-cli/src/views/: claim.rs  config.rs  consensus.rs  issues.rs  mod.rs  register.rs  status.rs
bins/bounty-executor/: Cargo.toml
coverage/html/: index.html
coverage/html/coverage/home/runner/work/bounty-challenge/bounty-challenge/src/: auth.rs.html  challenge.rs.html  config.rs.html  discovery.rs.html  gh_cli.rs.html  github.rs.html  github_oauth.rs.html  main.rs.html  metagraph.rs.html  migrations.rs.html  pg_storage.rs.html  server.rs.html  storage.rs.html
docs/: anti-abuse.md  api-reference.md  getting-started.md  scoring.md
docs/miner/: getting-started.md  registration.md
docs/reference/: api-reference.md  scoring.md
docs/validator/: setup.md
examples/: claim_bounty.sh  leaderboard.sh  register.sh  test_gh_cli.rs
migrations/: 001_initial.sql  001_schema.sql  005_repo_multipliers.sql  010_cleanup_false_invalids.sql  010_fix_negative_weight.sql  014_dynamic_penalty.sql  README.md
scripts/: setup.sh
solutions/: w04_32515.ts  w05_32515.ts  w06_32515.ts  w07_32515.ts  w08_32515.ts  w09_32515.ts  w10_32515.ts  w12_32515.ts  w13_32515.ts  w14_32515.ts  w17_32515.ts  w22_32515.ts
src/: auth.rs  challenge.rs  config.rs  consensus.rs  discovery.rs  gh_cli.rs  github.rs  github_oauth.rs  github_sync.rs  lib.rs  main.rs  metagraph.rs  migrations.rs  pg_storage.rs  routes.rs  scoring.rs  server.rs  shell.rs  ss58.rs  storage.rs  types.rs  validation.rs
src/api/: handlers.rs
src/storage/: bounty_storage.rs
src/terminal/: autoRepliesModel.ts
src/utils/: helper.js  helpers.py
