[package]
name = "bounty-challenge"
version = "2.0.0"
edition = "2021"
description = "Bounty Challenge – WASM evaluation module for Platform Network"
authors = ["CortexLM"]
license = "Apache-2.0"
repository = "https://github.com/PlatformNetwork/bounty-challenge"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
platform-challenge-sdk-wasm = { path = "../platform-v2/crates/challenge-sdk-wasm" }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
bincode = { version = "1.3", default-features = false }
