[package]
name = "bounty-executor"
version = "0.1.0"
edition = "2021"
description = "Remote evaluation executor for Bounty Challenge on Basilica"
authors = ["CortexLM"]
license = "Apache-2.0"

[[bin]]
name = "bounty-executor"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart", "ws"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full", "process", "sync"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async/Concurrency
dashmap = "6"
parking_lot = "0.12"

# Error/Logging
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time/UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tempfile = "3.27.0"

# Plagiarism detection
plagiarism-sdk = { path = "../../../plagiarism-sdk", features = ["python-parser"] }

[dev-dependencies]
pretty_assertions = "1"
